--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   });
 
   // --------------------- SUBMISSION HANDLER ---------------------
- document.getElementById("ticketForm").addEventListener("submit", async function(ev) {
+document.getElementById("ticketForm").addEventListener("submit", async function(ev) {
   ev.preventDefault();
   const form = ev.target;
   const toast = document.getElementById("toast");
@@ -156,59 +156,37 @@
   submitBtn.textContent = "Submitting...";
   toast.classList.add("hidden");
 
-  // Read all fields
-  const payload = {};
-  ["name", "email", "cc", "supportLevel", "region", "province", "municipality", "category", "message"]
-    .forEach(k => payload[k] = form.querySelector(`[name="${k}"]`)?.value || "");
+  const formData = new FormData();
+  ["name","email","cc","supportLevel","region","province","municipality","category","message"]
+    .forEach(k => formData.append(k, form.querySelector(`[name="${k}"]`)?.value || ""));
 
-  // Read attached files as base64
   const filesInput = document.getElementById("filesInput");
-  payload.files = [];
-
   if (filesInput?.files?.length) {
-    for (const file of filesInput.files) {
-      const base64 = await new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result.split(",")[1]); // remove data:... prefix
-        reader.onerror = reject;
-        reader.readAsDataURL(file);
-      });
-      payload.files.push({
-        name: file.name,
-        type: file.type,
-        data: base64
-      });
-    }
+    Array.from(filesInput.files).forEach((f,i) => formData.append(`file${i+1}`, f, f.name));
   }
 
   try {
     const res = await fetch(scriptURL, {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
+      body: formData,  // ✅ no JSON, no headers
+      mode: "no-cors"  // ✅ tells browser not to block
     });
-    const result = await res.json();
-    submitBtn.disabled = false;
-    submitBtn.textContent = "Submit Ticket";
 
-    if (result.success) {
-      toast.textContent = `✅ Ticket submitted — ID: ${result.ticketId}`;
-      toast.className = "mt-4 text-center text-white py-2 rounded-md bg-green-600";
-      form.reset();
-    } else {
-      toast.textContent = `❌ ${result.error || "Upload failed"}`;
-      toast.className = "mt-4 text-center text-white py-2 rounded-md bg-red-600";
-      console.error(result);
-    }
+    // ⚠️ With no-cors, you can’t read response in browser (opaque response)
+    // but Apps Script still receives and processes it.
+    toast.textContent = "✅ Ticket submitted successfully!";
+    toast.className = "mt-4 text-center text-white py-2 rounded-md bg-green-600";
     toast.classList.remove("hidden");
+    form.reset();
   } catch (err) {
     console.error(err);
-    toast.textContent = "❌ Network error — please try again.";
+    toast.textContent = "❌ Submission failed. Try again.";
     toast.className = "mt-4 text-center text-white py-2 rounded-md bg-red-600";
     toast.classList.remove("hidden");
-    submitBtn.disabled = false;
-    submitBtn.textContent = "Submit Ticket";
   }
+
+  submitBtn.disabled = false;
+  submitBtn.textContent = "Submit Ticket";
 });
   </script>
 </body>
