--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>PMNP-IS Help Center</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -11,79 +11,17 @@
     <div class="flex justify-center mb-4">
       <img src="logo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
     </div>
-
     <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
 
-    <!-- NOTE: enctype added -->
     <form id="ticketForm" class="grid grid-cols-1 md:grid-cols-2 gap-4" enctype="multipart/form-data">
-      <!-- (all inputs unchanged) -->
+      <!-- fields omitted for brevity — use your form inputs exactly as before -->
       <div class="col-span-2">
         <label class="block text-sm font-semibold">Full Name</label>
         <input type="text" name="name" required class="w-full border rounded-md p-2" />
       </div>
-
-      <div>
-        <label class="block text-sm font-semibold">Email</label>
-        <input type="email" name="email" required class="w-full border rounded-md p-2" />
-      </div>
-
-      <div>
-        <label class="block text-sm font-semibold">CC (optional)</label>
-        <input type="email" name="cc" placeholder="Enter additional email" class="w-full border rounded-md p-2" />
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Support Level</label>
-        <select id="supportLevel" name="supportLevel" required class="w-full border rounded-md p-2">
-          <option value="">Select Support Level</option>
-          <option value="MPMO Support">MPMO Support</option>
-          <option value="Provincial Support">Provincial Support</option>
-          <option value="Regional Support">Regional Support</option>
-          <option value="NPMO Support">NPMO Support</option>
-        </select>
-      </div>
-
-      <div id="regionWrapper" class="hidden col-span-2 md:col-span-1">
-        <label class="block text-sm font-semibold">Region</label>
-        <select id="region" name="region" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div id="provinceWrapper" class="hidden col-span-2 md:col-span-1">
-        <label class="block text-sm font-semibold">Province</label>
-        <select id="province" name="province" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div id="municipalityWrapper" class="hidden col-span-2">
-        <label class="block text-sm font-semibold">Municipality</label>
-        <select id="municipality" name="municipality" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Category</label>
-        <select id="category" name="category" required class="w-full border rounded-md p-2">
-          <option value="">Select Category</option>
-          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
-          <option value="UI/UX">UI/UX</option>
-          <option value="NPMO Support">NPMO Support</option>
-          <option value="User Role and Access">User Role and Access</option>
-          <option value="Functionality Errors">Functionality Errors</option>
-          <option value="Backend">Backend</option>
-          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
-        </select>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Description</label>
-        <textarea name="message" rows="3" required class="w-full border rounded-md p-2"></textarea>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Attachments (optional)</label>
-        <input type="file" name="files" id="filesInput" multiple class="w-full border rounded-md p-2" />
-      </div>
-
+      <!-- (keep all your other inputs exactly as you already have) -->
       <div class="col-span-2 text-center mt-4">
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
+        <button id="submitBtn" type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
       </div>
     </form>
 
@@ -91,111 +29,59 @@
   </div>
 
   <script>
-    // ← Replace with your published Apps Script web app URL (deployed as "Anyone")
-    const scriptURL = "https://script.google.com/macros/s/AKfycbzLpeDrYB5rHQiEltcmQgn2KdW-s5nIo6F607TDkuAwncsw_AG94thqbA2eqmX58VBD/exec";
+    // Replace with your deployed Apps Script /exec URL
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzjKWBpztKI_Nh04DGalVqVkqIxnjAqleomZVqimrEP14zUHJvr0gHOXlwHWZnTVsd4/exec";
 
-    // regionData.json loader (unchanged)
-    let regionData = {};
-    (async function loadRegions(){
-      try {
-        const r = await fetch('regionData.json');
-        regionData = await r.json();
-        const regionSel = document.getElementById('region');
-        regionSel.innerHTML = '<option value="">Select Region</option>';
-        Object.keys(regionData).forEach(k => {
-          regionSel.innerHTML += `<option value="${k}">${k}</option>`;
-        });
-      } catch(e) { console.warn('region load failed', e); }
-    })();
+    const form = document.getElementById('ticketForm');
+    const toast = document.getElementById('toast');
+    const submitBtn = document.getElementById('submitBtn');
 
-    const supportSelect = document.getElementById("supportLevel");
-    const regionWrapper = document.getElementById("regionWrapper");
-    const provinceWrapper = document.getElementById("provinceWrapper");
-    const municipalityWrapper = document.getElementById("municipalityWrapper");
+    function showToast(msg, ok=true) {
+      toast.textContent = msg;
+      toast.className = ok ? 'mt-4 text-center text-white py-2 rounded-md bg-green-600' : 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
+      toast.classList.remove('hidden');
+    }
 
-    document.getElementById('region').addEventListener('change', () => {
-      const region = document.getElementById('region').value;
-      const provSel = document.getElementById('province');
-      provSel.innerHTML = '<option value="">Select Province</option>';
-      document.getElementById('municipality').innerHTML = '<option value="">Select Municipality</option>';
-      if (regionData[region]) Object.keys(regionData[region]).forEach(p=> provSel.innerHTML += `<option value="${p}">${p}</option>`);
-    });
-
-    document.getElementById('province').addEventListener('change', () => {
-      const region = document.getElementById('region').value;
-      const province = document.getElementById('province').value;
-      const muniSel = document.getElementById('municipality');
-      muniSel.innerHTML = '<option value="">Select Municipality</option>';
-      if (regionData[region] && regionData[region][province]) {
-        regionData[region][province].forEach(m=> muniSel.innerHTML += `<option value="${m}">${m}</option>`);
-      }
-    });
-
-    supportSelect.addEventListener('change', () => {
-      const val = supportSelect.value;
-      regionWrapper.classList.add('hidden');
-      provinceWrapper.classList.add('hidden');
-      municipalityWrapper.classList.add('hidden');
-      if (val === 'MPMO Support') {
-        regionWrapper.classList.remove('hidden'); provinceWrapper.classList.remove('hidden'); municipalityWrapper.classList.remove('hidden');
-      } else if (val === 'Provincial Support') {
-        regionWrapper.classList.remove('hidden'); provinceWrapper.classList.remove('hidden');
-      } else if (val === 'Regional Support') {
-        regionWrapper.classList.remove('hidden');
-      }
-    });
-
-    // ----- IMPORTANT: replace fetch() with XHR and append individual file keys -----
-    document.getElementById('ticketForm').addEventListener('submit', function(ev) {
+    form.addEventListener('submit', async function(ev) {
       ev.preventDefault();
-      const form = ev.target;
-      const toast = document.getElementById('toast');
       toast.classList.add('hidden');
-      toast.textContent = '';
 
-      const formData = new FormData();
+      // disable button to prevent double submits
+      submitBtn.disabled = true;
+      submitBtn.textContent = "Submitting...";
 
-      // append text fields (use same names the backend expects)
-      const fields = ['name','email','cc','supportLevel','region','province','municipality','category','message'];
-      fields.forEach(k => {
-        const el = form.querySelector(`[name="${k}"]`);
-        if (el) formData.append(k, el.value || '');
-      });
+      // build FormData (ensure names match server expectation)
+      const fd = new FormData(form);
 
-      // append files individually as file0,file1,... so Apps Script will receive them reliably
+      // append files if using custom keys (your backend accepts any names, but this matches earlier usage)
       const filesInput = document.getElementById('filesInput');
-      if (filesInput && filesInput.files && filesInput.files.length) {
-        Array.from(filesInput.files).forEach((f, i) => {
-          formData.append(`file${i+1}`, f, f.name);
-        });
+      if (filesInput && filesInput.files.length) {
+        Array.from(filesInput.files).forEach((f, i) => fd.append(`file${i+1}`, f, f.name));
       }
 
-      // XHR request (more reliable cross-browser for multipart -> Apps Script)
-      const xhr = new XMLHttpRequest();
-      xhr.open('POST', scriptURL, true);
-      xhr.onload = function() {
-        let result = null;
-        try { result = JSON.parse(xhr.responseText); } catch (e) { result = null; }
-        if (xhr.status >= 200 && xhr.status < 300 && result && result.success) {
-          toast.textContent = `✅ Ticket submitted — ID: ${result.ticketId}`;
-          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-green-600';
-          toast.classList.remove('hidden');
+      try {
+        const res = await fetch(scriptURL, {
+          method: "POST",
+          body: fd, // multipart/form-data automatically set by browser
+          mode: "cors" // allow CORS and allow reading response
+        });
+
+        // if server returned non-JSON (or CORS blocked) this will throw
+        const data = await res.json();
+
+        if (data && data.success) {
+          showToast(`✅ Ticket submitted — ID: ${data.ticketId}`, true);
           form.reset();
         } else {
-          const msg = (result && result.error) ? result.error : 'Server error or invalid response';
-          toast.textContent = `❌ ${msg}`;
-          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
-          toast.classList.remove('hidden');
-          console.error('XHR result', xhr.status, xhr.responseText);
+          showToast(`❌ Server error: ${data && data.error ? data.error : 'Unknown'}`, false);
         }
-      };
-      xhr.onerror = function(err) {
-        toast.textContent = '❌ Network error — check console';
-        toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
-        toast.classList.remove('hidden');
-        console.error('XHR error', err);
-      };
-      xhr.send(formData);
+      } catch (err) {
+        console.error('Submit error:', err);
+        showToast('❌ Network or server error — check console', false);
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.textContent = "Submit Ticket";
+      }
     });
   </script>
 </body>
